Fixed the positioning of play button on small screens

--- a/styles.css
+++ b/styles.css
@@ -366,10 +366,6 @@ footer {
     font-size: 10px;
   }
 
-  #hero .section-nav {
-    right: 10px;
-  }
-
   #trailer .section-nav {
     bottom: 50px;
   }
